--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,13 @@
   "name": "chatbot",
   "version": "1.265.0",
   "description": "Chat bot made with Chat GPT API",
-  "main": "dist/src/index.js",
+  "main": "dist/src/server.js",
   "author": "",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch src/**/*.ts --exec ts-node ./src/app.ts",
     "build": "tsc --watch",
-    "start": "node ./dist/app.js",
+    "start": "node ./dist/server.js --watch",
     "lint": "eslint --fix --quiet src/**/*.ts",
     "format": "prettier --loglevel silent --write src/**/*.ts",
     "test": "jest",
@@ -16,10 +16,16 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
+    "openai": "^4.26.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
