--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
