⚙️chore(build.gradle) Updated applicationId in defaultConfig to "com.chatbot" from "com.client" in the android app build script.

--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.client"
+    namespace "com.chatbot"
     defaultConfig {
-        applicationId "com.client"
+        applicationId "com.chatbot"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
