--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.7",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
-    "react-native-reanimated": "^3.7.1"
+    "react-native-reanimated": "^3.7.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-system-navigation-bar": "^2.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
