--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.1",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -17,9 +18,12 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.7.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-system-navigation-bar": "^2.6.4"
+    "react-native-system-navigation-bar": "^2.6.4",
+    "react-native-vector-icons": "^10.0.3",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +34,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
