--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dropdownalert": "^5.1.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-responsive-screen": "^1.4.2",
