--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dropdownalert": "^5.1.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.10",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
