--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "http-proxy-agent": "^7.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "openai": "^4.26.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
