🚀feat(client) Added EncounteredIssues.txt to .gitignore

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -68,7 +68,7 @@ yarn-error.log
 # bak file
 /bak
 Project-requirement.txt
-
+EncounteredIssues.txt
 # React Native
 /android/app/build
 index.android.bundle
