--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "http-proxy-agent": "^7.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
