⚙️ chore(client/package.json): Update dependencies for react-native-event-source and @types/react-native-event-source

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dropdownalert": "^5.1.0",
+    "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -39,6 +40,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-event-source": "^1.1.2",
     "@types/react-native-fetch-blob": "^0.10.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
