🚀feat(client): Added react-native-uuid package to dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-native-sse": "^1.2.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "zustand": "^4.5.1"
   },
