--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@sentry/react-native": "^5.19.1",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "immer": "^10.0.3",
