--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "@vitalets/google-translate-api": "^9.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
