--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-native-dropdownalert": "^5.1.0",
     "react-native-event-source": "^1.1.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.7.1",
