--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@fal-ai/serverless-client": "^0.8.6",
     "@google/generative-ai": "^0.2.1",
     "@vitalets/google-translate-api": "^9.2.0",
     "cloudinary": "^2.0.2",
