--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-sse": "^1.2.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
