--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "immer": "^10.0.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dropdownalert": "^5.1.0",
